conditions.Conditions.scala.error
Compilation error:
Conditions:1: error: '(' expected but identifier found.
if isFacingWall()==True {
   ^Conditions:7: error: illegal start of simple expression
	}
        ^